# buildpack_demo

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: buildpack.yml
