[tool.poetry]
name = "buildpack-demo"
version = "0.1.0"
description = ""
authors = ["Tatsuya Tomita <tat@seriousexplosion.net>"]
readme = "README.md"
packages = [{include = "buildpack_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
